[i18n] Translate titles using metafields or json

--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -89,7 +89,7 @@
       "add_new": "Neue Adresse hinzufügen",
       "first_name": "Vorname",
       "last_name": "Nachname",
-      "company": "Firma",
+      "company": "Unternehmen",
       "address1": "Adresse",
       "address2": "Adresszusatz",
       "city": "Stadt",
