[Product] Show next an prev product links

--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -62,6 +62,8 @@
     "add": "Hinzufügen",
     "sold_out": "Ausverkauft",
     "quantity": "Menge",
+    "next": "Nächstes",
+    "prev": "Vorheriges",
     "options": {
       "30": "30",
       "32": "32",
