[Product] Show Choose size label instead of add to card if no size was choosed

--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -59,6 +59,7 @@
     "vest": "Vest"
   },
   "products": {
+    "choose": "Größe wählen",
     "add": "Hinzufügen",
     "sold_out": "Ausverkauft",
     "quantity": "Menge",
