[Layout] Some layout changes, bigger icons, hamburger with lines

--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -20,7 +20,7 @@
       "crafter_html": "Das Art+Code Studio versteht, dass jeder Kunde einzigartig ist, jedes Projekt einen anderen Ansatz erfordert und dass jedes Projekte unvoreingenommen und mit freien Gedanken begonnen werden muss. So entdecken wir in enger Zusammenarbeit mit unseren Kunden das Potenzial und schaffen kreative und schöne Lösungen. Schreib uns: <a href=\"mailto:hi@artandcode.studio\">hi@artandcode.studio<\/a>"
     },
     "navigation": {
-      "teaser_text": "Willkommen in der Welt der Trends, Fashion Inspirationen und High-End-Ready-to-Wear Stücken."
+      "teaser_text": "Welcome to the online home of covering trends, fashion inspiration and high end ready to wear pieces."
     }
   },
   "menus": {
@@ -32,7 +32,7 @@
     "legal-area": "Rechtliches",
     "stories": "Stories",
     "store": "Store",
-    "about": "Über",
+    "about": "About",
     "fassbender": "#Fassbender",
     "customer-care": "Kundenservice",
     "newsletter": "Newsletter",
