[Remote] Remote changes

--- a/theme/locales/en.default.json
+++ b/theme/locales/en.default.json
@@ -17,7 +17,7 @@
     "footer": {
       "home": "FASSBENDER",
       "copyright": "2018 FASSBENDER. All rights reserved",
-      "crafter_html": "The <a href=\"https://artandcode.studio/\" target=\"_blank\" rel=\"noopener\">Art+Code Studio</a> accepts that every client is unique, each project requires a different approach and that all projects need to be launched with an open mind. In order for us to do collaborate closely with our clients to discover the potential and erect a creative and beautiful solutions. Just drop us an email <a href=\"mailto:hi@artandcode.studio\">hi@artandcode.studio<\/a>"
+      "crafter_html": "The <a href=\"https:\/\/artandcode.studio\/\" target=\"_blank\" rel=\"noopener\">Art+Code Studio<\/a> accepts that every client is unique, each project requires a different approach and that all projects need to be launched with an open mind. In order for us to do collaborate closely with our clients to discover the potential and erect a creative and beautiful solutions. Just drop us an email <a href=\"mailto:hi@artandcode.studio\">hi@artandcode.studio<\/a>"
     }
   },
   "menus": {
