Fix Copyright text (always current year) and fix IPrepairedProductVariant.chooseOption

--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -16,7 +16,7 @@
     },
     "footer": {
       "home": "FASSBENDER",
-      "copyright": "2018 FASSBENDER. Alle Rechte vorbehalten",
+      "copyright": "FASSBENDER. Alle Rechte vorbehalten",
       "crafter_html": "Das <a href=\"https:\/\/artandcode.studio\/\" target=\"_blank\" rel=\"noopener\">Art+Code Studio<\/a> versteht, dass jeder Kunde einzigartig ist, jedes Projekt einen anderen Ansatz erfordert und dass jedes Projekte unvoreingenommen und mit freien Gedanken begonnen werden muss. So entdecken wir in enger Zusammenarbeit mit unseren Kunden das Potenzial und schaffen kreative und schöne Lösungen. Schreib uns: <a href=\"mailto:hi@artandcode.studio\">hi@artandcode.studio<\/a>"
     }
   },
