--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -165,8 +165,8 @@
     },
     "privacy": {
       "tracking_title": "Tracking-Dienste deaktivieren",
-      "do_not_track_note": "Wir empfehle Ihnen die <strong>Do Not Track</strong> Option ihres Browsers zu aktivieren wenn sie kein Tracking wünschen. Dies deaktiviert auch automatisch die unten aufgeführten Optionen.",
-      "do_not_track_is_enabled": "Alles sauber, denn Sie haben die <strong>Do Not Track</strong> Option ihres Browsers aktiviert, daher sind die unten stehenden Tracking-Dienste bereits deaktiviert.",
+      "do_not_track_note_html": "Wir empfehle Ihnen die <strong>Do Not Track</strong> Option Ihres Browsers zu aktivieren wenn Sie kein Tracking wünschen. Dies deaktiviert auch automatisch die unten aufgeführten Optionen.",
+      "do_not_track_is_enabled_html": "Alles sauber, denn Sie haben die <strong>Do Not Track</strong> Option Ihres Browsers aktiviert, daher sind die unten stehenden Tracking-Dienste bereits deaktiviert.",
       "cookies_label_html": "Erlaube die Verwendung von Cookies<br><small>Leider kannst du Cookies nicht deaktivieren, da sie notwendig sind, damit der Shop funktioniert<\/small>",
       "shopify_tracking_label_html": "Erlaube internes Tracking durch unser Shopsystem<br><small>Leider kannst du das Tracking durch unser Shopsystem nicht deaktivieren<\/small>",
       "google_analytics_label_html": "Erlaube Tracking durch <a href=\"https:\/\/analytics.google.com\/\">Google Analytics<\/a>",
