--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -165,8 +165,8 @@
     },
     "privacy": {
       "tracking_title": "Tracking-Dienste deaktivieren",
-      "do_not_track_note_html": "Wir empfehle Ihnen die <strong>Do Not Track</strong> Option Ihres Browsers zu aktivieren wenn Sie kein Tracking wünschen. Dies deaktiviert auch automatisch die unten aufgeführten Optionen.",
-      "do_not_track_is_enabled_html": "Alles sauber, denn Sie haben die <strong>Do Not Track</strong> Option Ihres Browsers aktiviert, daher sind die unten stehenden Tracking-Dienste bereits deaktiviert.",
+      "do_not_track_note_html": "Wir empfehle Ihnen die <strong>Do Not Track<\/strong> Option Ihres Browsers zu aktivieren wenn Sie kein Tracking wünschen. Dies deaktiviert auch automatisch die unten aufgeführten Optionen.",
+      "do_not_track_is_enabled_html": "Alles sauber, denn Sie haben die <strong>Do Not Track<\/strong> Option Ihres Browsers aktiviert, daher sind die unten stehenden Tracking-Dienste bereits deaktiviert.",
       "cookies_label_html": "Erlaube die Verwendung von Cookies<br><small>Leider kannst du Cookies nicht deaktivieren, da sie notwendig sind, damit der Shop funktioniert<\/small>",
       "shopify_tracking_label_html": "Erlaube internes Tracking durch unser Shopsystem<br><small>Leider kannst du das Tracking durch unser Shopsystem nicht deaktivieren<\/small>",
       "google_analytics_label_html": "Erlaube Tracking durch <a href=\"https:\/\/analytics.google.com\/\">Google Analytics<\/a>",
@@ -344,7 +344,7 @@
     },
     "pinterest": {
       "title": "Pinterest Tracking",
-      "description_html": "For information on the technology used by Pinterest and privacy, visit the following link: <a href=\"https:\/\/help.pinterest.com\/en/business\/article\/pinterest-tag-parameters-and-cookies\">help.pinterest.com\/en/business\/article\/pinterest-tag-parameters-and-cookies<\/a>",
+      "description_html": "For information on the technology used by Pinterest and privacy, visit the following link: <a href=\"https:\/\/help.pinterest.com\/en\/business\/article\/pinterest-tag-parameters-and-cookies\">help.pinterest.com\/en\/business\/article\/pinterest-tag-parameters-and-cookies<\/a>",
       "_pinterest_sess": "The Pinterest login cookie. Contains user id(s), authentication token(s), timestamp, etc.  If the user is logged out, authentication tokens are deleted, but we still leave the cookie present; we use the (logged out) user ids to optimize the user experience and measurement.",
       "_pinterest_ct": "This is the equivalent of the _pinterest_sess cookie for our in-app browser.  This cookie is set in Pinner's in-app browser is set whenever the Pinner views offsite content (e.g. a 3rd party website) from within the Pinterest app.",
       "_pinterest_ct_mw": "This is set whenever offsite content (e.g. a 3rd party website) is loaded in Pinner's mobile browser (e.g. Safari).  The Pinterest App opens content in the Pinner's mobile browser (instead of the in-app browser) whenever the Pinner clicks the \"Open in …\" button.  Also, we occasionally redirect the Pinner to the mobile browser (rather than in-app browser) experience.",
