--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -49,7 +49,11 @@
     "addresses": "Adressen",
     "all": "Alle",
     "blog": "Stories",
-    "vlog": "Vlog"
+    "vlog": "Vlog",
+    "lookbook": "Lookbook",
+    "lookbook-fw18": "Lookbook FW18",
+    "lookbook-fw19": "Lookbook FW19",
+    "lookbook-fw20": "Lookbook FW20"
   },
   "collections": {
     "all": "Alle",
