New toggle button

--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -61,7 +61,7 @@
     "coat": "Coat",
     "jacket": "Jacket",
     "vest": "Vest",
-    "dress": "Dress",
+    "dress": "Kleider",
     "scarf": "Scarf",
     "spring-summer": "Spring/Summer",
     "winter-sale": "Winter SALE"
