--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -50,7 +50,7 @@
     "all": "Alle",
     "blog": "Stories",
     "vlog": "Vlog",
-    "springsummer": "Spring/Summer",
+    "springsummer": "Spring\/Summer",
     "winter-sale": "Winter SALE",
     "lookbook": "Lookbook",
     "lookbook-fw18": "Lookbook FW18",
@@ -63,7 +63,7 @@
     "vest": "Vest",
     "dress": "Kleider",
     "scarf": "Scarf",
-    "spring-summer": "Spring/Summer",
+    "spring-summer": "Spring\/Summer",
     "winter-sale": "Winter SALE"
   },
   "products": {
