--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -64,7 +64,8 @@
     "dress": "Kleider",
     "scarf": "Scarf",
     "spring-summer": "Spring\/Summer",
-    "winter-sale": "Winter SALE"
+    "winter-sale": "Winter SALE",
+    "type": "Filter"
   },
   "products": {
     "choose": "Größe wählen",
