--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -28,6 +28,7 @@
     "contact": "Kontakt",
     "crafter": "Handgefertigt von Art+Code Studio",
     "legal-area": "Rechtliches",
+    "disclaimer--legal-notice": "Impressum + Rechtliches",
     "stories": "Stories",
     "store": "Store",
     "shop-online": "Shop online",
@@ -54,7 +55,10 @@
     "winter-sale": "Winter SALE",
     "lookbook": "Lookbook",
     "lookbook-fw18": "Lookbook FW18",
-    "lookbook-fw19": "Lookbook FW19"
+    "lookbook-fw19": "Lookbook FW19",
+    "sale": "Sale",
+    "about-fassbender": "About Fassbender",
+    "shipping--return": "Versand + Retour"
   },
   "collections": {
     "all": "Alle",
