--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -69,7 +69,10 @@
     "scarf": "Schals",
     "spring-summer": "Spring\/Summer",
     "winter-sale": "Winter SALE",
-    "type": "Filter"
+    "type": "Filter",
+    "new-collection": "New Collection",
+    "sale": "SALE",
+    "skirt": "Skirt"
   },
   "products": {
     "choose": "Größe wählen",
